# stellargraph

./: meta.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
stellargraph/: __init__.py  version.py
